refactor(BugemonTeam): removed get(int index) method
Co-authored-by: Romain Liefferinckx <romain.liefferinckx@ulb.be>